[package]
name = "api"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "david/generic-serve" }
napi = { version = "2.16.6", features = ["async"] }
napi-derive = "2.16.4"
tokio = { version = "1.37.0", features = ["full"] }


[build-dependencies]
napi-build = "2.1.3"
